Add CI to test builds automatically (#6)